testsuite/single/tests/compiler/fail/bad_local_init2.c
TYPETEST

void foo() {
    int x = "hi";
}
